# lunch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: img_processing_manual_test.py  ocr_service_test.py  test_menu_extraction.py
src/: __init__.py  config.py  image_processing.py  llm_parser.py  ocr_service.py
tests/: __init__.py  test_base.py  test_image_processor.py  test_llm_parser.py  test_ocr_service.py
tests/test_files/: test_ocr_text.txt
